[gd_scene load_steps=13 format=3 uid="uid://ba3rkgbyxsyo0"]

[ext_resource type="Script" path="res://addons/SimpleDungeons/DungeonGenerator3D.gd" id="2_eg2pk"]
[ext_resource type="PackedScene" uid="uid://f6kx848g5bco" path="res://FPSController/FPSController.tscn" id="3_brgjj"]
[ext_resource type="PackedScene" uid="uid://csrej0276i7aa" path="res://multiplayer_example/example_rooms/living_room.tscn" id="3_lhbkb"]
[ext_resource type="PackedScene" uid="uid://uvjwegylgdb" path="res://multiplayer_example/example_rooms/stair.tscn" id="4_wb8ld"]
[ext_resource type="PackedScene" uid="uid://b87nfkjf6vy6h" path="res://multiplayer_example/example_rooms/corridor.tscn" id="5_hvl01"]
[ext_resource type="Script" path="res://addons/SimpleDungeons/DungeonRoom3D.gd" id="6_huxqn"]
[ext_resource type="PackedScene" uid="uid://tk377j0jo511" path="res://multiplayer_example/PlayerMultiplayerSpawner.tscn" id="6_qqrnq"]
[ext_resource type="Script" path="res://addons/SimpleDungeons/utils/RandomNumberMultiplayer.gd" id="8_82h5t"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_ga1mx"]
sky_horizon_color = Color(0.64625, 0.65575, 0.67075, 1)
ground_horizon_color = Color(0.64625, 0.65575, 0.67075, 1)

[sub_resource type="Sky" id="Sky_c72ol"]
sky_material = SubResource("ProceduralSkyMaterial_ga1mx")

[sub_resource type="Environment" id="Environment_omyfu"]
background_mode = 2
sky = SubResource("Sky_c72ol")
tonemap_mode = 2
glow_enabled = true

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_y3oqi"]
albedo_color = Color(0, 0, 0, 1)

[node name="DungeonTest" type="Node3D"]

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(-0.866023, -0.433016, 0.250001, 0, 0.499998, 0.866027, -0.500003, 0.749999, -0.43301, 0, 0, 0)
shadow_enabled = true

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_omyfu")

[node name="CSGBox3D" type="CSGBox3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1.93937, 0)
use_collision = true
size = Vector3(15, 1, 15)
material = SubResource("StandardMaterial3D_y3oqi")

[node name="Label3D" type="Label3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.930088, -5.1684)
text = "Generating dungeon ahead. Press v to noclip and fly in."

[node name="DungeonGenerator3D" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -109.939)
script = ExtResource("2_eg2pk")
room_scenes = Array[PackedScene]([ExtResource("3_lhbkb"), ExtResource("4_wb8ld")])
corridor_room_scene = ExtResource("5_hvl01")
dungeon_size = Vector3i(10, 16, 10)
generate_on_ready = false
max_retries = 0
show_debug_in_game = true
place_even_if_fail = true
visualize_generation_progress = true

[node name="LivingRoom" parent="DungeonGenerator3D" instance=ExtResource("3_lhbkb")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -40, 45, 40)

[node name="DungeonRoom3D" type="Node3D" parent="DungeonGenerator3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 5, 5, 45)
script = ExtResource("6_huxqn")

[node name="DOOR" type="Node3D" parent="DungeonGenerator3D/DungeonRoom3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -5)

[node name="CSGBox3D" type="CSGBox3D" parent="DungeonGenerator3D/DungeonRoom3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -5, 26.65)
use_collision = true
size = Vector3(5, 1, 63.7)

[node name="PlayerMultiplayerSpawner" parent="." instance=ExtResource("6_qqrnq")]
player_scene = ExtResource("3_brgjj")

[node name="RandomNumberMultiplayer" type="Node" parent="."]
script = ExtResource("8_82h5t")

[connection signal="got_random_int" from="RandomNumberMultiplayer" to="DungeonGenerator3D" method="generate"]
